# percival-detector

./: .gitignore  .travis.yml  NEWS.txt  README.md
cpp/: CMakeLists.txt
cpp/daq/: CMakeLists.txt
cpp/daq/common/include/: PercivalTransport.h  percival.spec.in  version.h.in
cpp/daq/frameProcessor/: CMakeLists.txt
cpp/daq/frameProcessor/include/: Calibrator.h  CalibratorSample.h  FrameMem.h  PercivalGenPlugin.h  PercivalProcess2Plugin.h  PercivalProcess3Plugin.h
cpp/daq/frameProcessor/src/: CMakeLists.txt  CalibratorReset.cpp  CalibratorSample.cpp  FrameMem.cpp  PercivalGenPlugin.cpp  PercivalProcess2Plugin.cpp
cpp/daq/frameProcessor/test/: CMakeLists.txt  PercivalCalibRTests.cpp  PercivalCalibTests.cpp  PercivalFrameProcessorTest.cpp
cpp/daq/frameReceiver/include/: PercivalFrameDecoder.h
cpp/daq/frameReceiver/src/: PercivalFrameDecoder.cpp
cpp/daq/frameReceiver/test/: CMakeLists.txt
cpp/daq/frameSimulator/src/: PercivalFrameSimulatorPlugin.cpp  frameSimCheck.py
cpp/daq/tools/user_scripts/: README  fp.log4cxx  fp1.json  fp2.json  fr.log4cxx  fr2.json  fr_log4cxx.xml  stFrameProcessor1.sh
data/: CMakeLists.txt
data/cmake/: FindOdinData.cmake
data/common/include/: PercivalEmulatorDefinitions.h  PercivalTransport.h  percival.spec.in
data/frameProcessor/: CMakeLists.txt
data/frameProcessor/include/: Calibrator.h  CalibratorReset.h  CalibratorSample.h  FrameMem.h  PercivalCalibPlugin.h  PercivalGenPlugin.h  PercivalProcess2Plugin.h  PercivalProcess3Plugin.h  PercivalProcessPlugin.h  SIMDMacros.h
data/frameProcessor/src/: CMakeLists.txt  CalibratorReset.cpp  CalibratorSample.cpp  FrameMem.cpp  PercivalCalibPlugin.cpp  PercivalGenPlugin.cpp  PercivalProcess2Plugin.cpp  PercivalProcess3Plugin.cpp  PercivalProcessPlugin.cpp
data/frameProcessor/test/: CMakeLists.txt  PercivalCalibRTests.cpp  PercivalCalibTests.cpp  PercivalFrameProcessorTest.cpp  SimdTests.cpp  meanvar-gen.cpp
data/frameReceiver/: CMakeLists.txt
data/frameReceiver/include/: PercivalEmulatorFrameDecoder.h  PercivalFrameDecoder.h
data/frameReceiver/src/: CMakeLists.txt  PercivalEmulatorFrameDecoder.cpp  PercivalFrameDecoder.cpp  PercivalFrameDecoderLib.cpp
data/frameReceiver/test/: CMakeLists.txt  PercivalEmulatorFrameDecoderUnitTest.cpp  PercivalFrameDecoderUnitTest.cpp
data/frameSimulator/include/: PercivalFrameSimulatorPlugin.h
data/frameSimulator/src/: CMakeLists.txt  PercivalFrameSimulatorPlugin.cpp
data/tools/python/: decode_raw_frames_hdf5.py  emulator_client.py
data/tools/user_scripts/: README  fp1.json  fp2.json  fp_log4cxx.xml  fr1.json  fr2.json  stFrameProcessor2.sh  stFrameReceiver1.sh  stFrameReceiver2.sh
python/live_viewer/: .gitignore  descrambler.py  live_viewer.py
tools/python/live_viewer/: .pylintrc  descrambler.py  live_viewer.py  mplplot.py
wiener/: README.md
